# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  init.bash
.devcontainer/app/: Dockerfile
hooks/: check-for-xxx
precommit_hooks/: check_for_xxx.py
src/precommit_hooks/: check_for_markers.py  check_for_xxx.py
